--- a/.github/workflows/deploy_to_dev.yml
+++ b/.github/workflows/deploy_to_dev.yml
@@ -23,5 +23,5 @@ jobs:
           TARGET_DIR: rungisapps
 
   call-workflow:
-    uses: dhaval210/rungisoperation/.github/workflows/blank.yml@dev
+    uses: dhaval210/rungisoperation/.github/workflows/main.yml@dev
     secrets: inherit
